--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <body>
 
     <header>
-        <h1>Your Website</h1>
+        <h1>Andrew's Website</h1>
     </header>
 
     <nav>
@@ -53,12 +53,12 @@
     </nav>
 
     <section>
-        <h2>Welcome to Our Website!</h2>
-        <p>This is a sample index file for your website. You can customize it to meet your specific requirements.</p>
+        <h2>Welcome to My Website!</h2>
+        <p>There is nothing here right now.</p>
     </section>
 
     <footer>
-        <p>&copy; 2023 Your Website. All rights reserved.</p>
+        <p>&copy; 2023 Andrew Taylor. All rights reserved.</p>
     </footer>
 
 </body>
