--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <section>
         <h2>Welcome to My Website!</h2>
         <p>There is nothing here right now.</p>
-        <p>But you can check out this tool I made for visualing my students' grade distribution: https://404program.pythonanywhere.com</p>
+        <p>But you can check out this tool I made for visualing my students' grade distribution:  <a href="https://404program.pythonanywhere.com">https://404program.pythonanywhere.com</a></p>
     </section>
 
     <footer>
