--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
         <p>&copy; 2023 Andrew Taylor. All rights reserved.</p>
     </footer>
 
+
+    <div id="game-container">
+        <!-- Bubbles will be dynamically added here using JavaScript -->
+    </div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
