--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             padding: 10px;
             background-color: #f0f0f0;
         }
-    </style>
+    </style>   
+    <script defer src="script.js"></script>
 </head>
 
 <body>
