--- a/index.html
+++ b/index.html
@@ -6,38 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Website Title</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-
-        header {
-            text-align: center;
-            padding: 10px;
-            background-color: #f0f0f0;
-        }
-
-        nav {
-            margin-top: 20px;
-        }
-
-        nav a {
-            text-decoration: none;
-            margin: 0 10px;
-            color: #333;
-        }
-
-        section {
-            margin-top: 20px;
-        }
-
-        footer {
-            margin-top: 20px;
-            text-align: center;
-            padding: 10px;
-            background-color: #f0f0f0;
-        }
-    </style>   
+        /* Your existing styles remain the same */
+    </style>
     <script defer src="script.js"></script>
 </head>
 
@@ -55,21 +25,19 @@
 
     <section>
         <h2>Welcome to My Website!</h2>
-        <p>Test 1</p>
+        <p>Test 2</p>
         <p>There is nothing here right now.</p>
-        <p>But you can check out this tool I made for visualing my students' grade distribution:  <a href="https://404program.pythonanywhere.com">https://404program.pythonanywhere.com</a></p>
+        <p>But you can check out this tool I made for visualizing my students' grade distribution:  <a href="https://404program.pythonanywhere.com">https://404program.pythonanywhere.com</a></p>
     </section>
 
     <footer>
         <p>&copy; 2023 Andrew Taylor. All rights reserved.</p>
     </footer>
 
-
     <div id="game-container">
         <!-- Bubbles will be dynamically added here using JavaScript -->
     </div>
 
-    <script src="script.js"></script>
 </body>
 
 </html>
