--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         /* Your existing styles remain the same */
     </style>
-    <script defer src="script.js"></script>
+    <script defer src="andrewtaylor11.github.io/script.js"></script>
 </head>
 
 <body>
