--- a/index.html
+++ b/index.html
@@ -14,28 +14,15 @@
 <body>
 
     <header>
-        <h1>Andrew's Website</h1>
+        <h1>Andrew Taylor</h1>
     </header>
 
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
-    </nav>
 
-    <section>
-        <h2>Welcome to My Website!</h2>
-        <p>Test 3</p>
-        <p>There is nothing here right now.</p>
-        <p>But you can check out this tool I made for visualizing my students' grade distribution:  <a href="https://404program.pythonanywhere.com">https://404program.pythonanywhere.com</a></p>
-    </section>
+    <h1>PDF Viewer</h1>
 
-    <footer>
-        <p>&copy; 2023 Andrew Taylor. All rights reserved.</p>
-    </footer>
-
-    <div id="game-container">
-        <!-- Bubbles will be dynamically added here using JavaScript -->
+    <div>
+        <!-- Using the embed tag -->
+        <embed src="/Users/andrewtaylor/Documents/GitHub/andrewtaylor11.github.io/AndrewTaylor_Resume.pdf" type="application/pdf" width="100%" height="600px" />
     </div>
 
 </body>
