--- a/index.html
+++ b/index.html
@@ -14,14 +14,19 @@
 <body>
 
     <header>
-        <h1>Andrew Taylor</h1>
+        <h1>Andrew Taylor Resume</h1>
     </header>
 
+    <nav>
+        <ul>
+            <li><a href="https://www.linkedin.com/in/andrew-taylor-60258227b" target="_blank">LinkedIn</a></li>
+            <li><a href="https://github.com/andrewtaylor11" target="_blank">GitHub</a></li>
+        </ul>
+    </nav>
 
-    <h1>PDF Viewer</h1>
+    <h1></h1>
 
     <div>
-        <!-- Using the embed tag -->
         <embed src="/Users/andrewtaylor/Documents/GitHub/andrewtaylor11.github.io/AndrewTaylor_Resume.pdf" type="application/pdf" width="100%" height="600px" />
     </div>
 
