--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <h1></h1>
 
     <div>
-        <embed src="/Users/andrewtaylor/Documents/GitHub/andrewtaylor11.github.io/AndrewTaylor_Resume.pdf" type="application/pdf" width="100%" height="600px" />
+        <embed src="AndrewTaylor_Resume.pdf" type="application/pdf" width="100%" height="600px" />
     </div>
 
 </body>
