--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <h1 class="title"><a href="#About">About Me</a></h1>
       <div class="content">
         <div class="wrapper" style="display: flex; flex-wrap: wrap; align-items: center;">
-          <img src="/Users/andrewtaylor/Documents/CodingProjects/Jan7Portfolio/headshot.png" alt="Your Photo" style="max-width: 30%; height: auto; display: block; margin-right: 20px;">
+          <img src="headshot.png" alt="Your Photo" style="max-width: 30%; height: auto; display: block; margin-right: 20px;">
           <p style="flex: 1; max-width: calc(100% - 130px); margin-bottom: 0;">
             Greetings! I'm a soon-to-be biology graduate from Trinity Western University in beautiful British Columbia. Originally hailing from the picturesque Okanagan Valley, I've cultivated a deep appreciation for nature, spending my free time climbing, hiking, and skiing amidst the stunning landscapes. <br> <br> While my academic journey has been rooted in the world of biology, my passion extends beyond the lab. I'm not only a biology enthusiast but also a skilled programmer, seamlessly merging my scientific background with the art of coding. Beyond the confines of the lab, I've delved into the intricate world of software development, where I bring a unique perspective to creating innovative solutions. 
           </p>
@@ -70,7 +70,7 @@
       <div class="content">
         <div class="wrapper">
           <section style="display: flex; align-items: center;">
-            <img src="/Users/andrewtaylor/Documents/CodingProjects/Jan7Portfolio/twu_flame_gold_2x.png" alt="Logo" style="max-width: 100px; height: auto;">
+            <img src="twu_flame_gold_2x.png" alt="Logo" style="max-width: 100px; height: auto;">
             <div style="flex: 1; margin-left: 20px;">
               <h2>Bachelor of Science: Biology</h2>
               <p><strong>Trinity Western University</strong> | Fall 2020 – April 2024</p>
@@ -148,7 +148,7 @@
           <div class="project" style="display: flex; flex-wrap: wrap; align-items: center; width: 100%;">
             <div class="project-image" style="max-width: 50%; flex: 1; margin-right: 20px;">
               <!-- Add your project 1 image here -->
-              <img src="/Users/andrewtaylor/Documents/CodingProjects/Jan7Portfolio/GradeDistributionPython.png" alt="Project 1 Image" style="width: 100%; height: auto;">
+              <img src="GradeDistributionPython.png" alt="Project 1 Image" style="width: 100%; height: auto;">
             </div>
     
             <div class="project-details" style="flex: 1; max-width: 50%;">
@@ -176,7 +176,7 @@
             </div>
             <div class="project-image" style="max-width: 50%; flex: 1; margin-right: 20px;">
               <!-- Add your project 2 image here -->
-              <img src="/Users/andrewtaylor/Documents/CodingProjects/Jan7Portfolio/barnacleDistribution.png" alt="Project 2 Image" style="width: 100%; height: auto;">
+              <img src="barnacleDistribution.png" alt="Project 2 Image" style="width: 100%; height: auto;">
             </div>
           </div>
         </div>
@@ -189,7 +189,7 @@
           <div class="project" style="display: flex; flex-wrap: wrap; align-items: center; width: 100%;">
             <div class="project-image" style="max-width: 50%; flex: 1; margin-right: 20px;">
               <!-- Add your project 3 image here -->
-              <img src="/Users/andrewtaylor/Documents/CodingProjects/Jan7Portfolio/iNaturalistPortfolio.png" alt="Project 1 Image" style="width: 100%; height: auto;">
+              <img src="iNaturalistPortfolio.png" alt="Project 1 Image" style="width: 100%; height: auto;">
             </div>
     
             <div class="project-details" style="flex: 1; max-width: 50%;">
@@ -216,7 +216,7 @@
             </div>
             <div class="project-image" style="max-width: 50%; flex: 1; margin-right: 20px;">
               <!-- Add your project 2 image here -->
-              <img src="/Users/andrewtaylor/Documents/CodingProjects/Jan7Portfolio/fractalTree.png" alt="Project 4 Image" style="width: 100%; height: auto;">
+              <img src="fractalTree.png" alt="Project 4 Image" style="width: 100%; height: auto;">
             </div>
           </div>
         </div>
