--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sticky Slider Nav</title>
+  <title>Andrew Taylor</title>
 
       <!-- Link to external CSS file -->
   <link rel="stylesheet" href="styles.css">
