--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
     
     <button class="btn">
-      <a href="AndrewTaylor_Resume.pdf" download="AndrewTaylor_Resume copy(No Address).pdf" style="text-decoration: none; color: inherit;">
+      <a href="AndrewTaylor_Resume.pdf" download="AndrewTaylor_Resume.pdf" style="text-decoration: none; color: inherit;">
           Résumé PDF
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
